# Hue

./: Hue.cabal  README.md  stack.yaml
doc/: .doc.tex.swp  Makefile  coc.tex  doc.bib  doc.tex  hue.tex  pts.tex
examples/: nat.hue  plantilla_p1.hue  relaciones.hue
includes/: Prelude.hue
proofgeneral/hue/: hue-abbrev.el  hue-hooks.el  hue-keywords.el  hue-syntax.el  hue-unicode-tokens.el  hue.el
proofgeneral/hue_old/: hue-syntax.el
src/: Logic.hue  Main.hs
src/Core/: API.hs  Context.hs  RawContext.hs  Reduction.hs  Term.hs  TypeChecker.hs
src/Format/: AST.hs  Lexer.hs  Parser.hs  Pretty.hs
src/Interactive/Prover/: Prover.hs
src/Interactive/Repl/: Command.hs  Loop.hs  Parser.hs
src/Tactics/: ProverState.hs  Tactics.hs
