name:                Hue
version:             0.1.0.0
synopsis:            Hue proof assistant
description:         Please see README.md
homepage:            https://github.com/herbrand-universe/Hue
author:              Nicolas Cabral
maintainer:          Nicolas Cabral
copyright:           2017 Nicolas Cabral
category:            Languages
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable Hue
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5,
                       mtl >=2.2 && <2.3,
                       parsec >=3.1 && <3.2,
                       pretty >=1.1 && <1.2,
                       haskeline >=0.7 && <0.8,
                       transformers >= 0.4.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:       Core.API, Core.Context, Core.RawContext, Core.Reduction, Core.Term, Core.TypeChecker,
                       Format.AST, Format.Lexer, Format.Parser, Format.Pretty,
                       Interactive.Prover.Prover, Interactive.Repl.Command, Interactive.Repl.Loop, Interactive.Repl.Parser,
                       Tactics.ProverState, Tactics.Tactics

